--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "auth": "^1.0.2",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
+    "compressorjs": "^1.2.1",
     "heroicons": "^2.1.3",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
